nextcloud/nextcloud-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-router
  namespace: documents
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cloud.attias.io`)
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
  tls:
    certResolver: le
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: collabora-router
  namespace: documents
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`collabora.attias.io`)
      kind: Rule
      services:
        - name: nextcloud-collabora
          port: 9980
      middlewares:
        - name: nextcloud-hsts
  tls:
    certResolver: le
